--- a/desafiopizza/src/assets/style.css
+++ b/desafiopizza/src/assets/style.css
@@ -1,11 +1,6 @@
 body {
     margin: 0px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
+    }
   
   code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -29,10 +24,21 @@ body {
     background-size: cover;
   }
   
-  .titulo {
+  .Navbar h4 {
     text-align: center;
     align-items: center;
     justify-content: space-between;
     
+  }
+
+  .header p{
+   text-align: center;
+  }
+
+  .pizza{
+  justify-items: center;
+    
+
+   
   }
   
